unpackaged/main/default/objects/DPSA_contract__c/DPSA_contract__c.object-meta.xml
<CustomObject>
    <label>MSA contract</label>
    <nameField>
        <label>DPSA contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DPSA contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>