unpackaged/main/default/objects/DPSA_contract__c/fields/DPSA_Contracted_Discount__c.field-meta.xml
<CustomField>
    <fullName>DPSA_Contracted_Discount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DPSA Contracted Discount</label>
    <referenceTo>DPSA_Contracted_Discount__c</referenceTo>
    <relationshipName>DPSA_contracts</relationshipName>
    <type>Lookup</type>
</CustomField>