unpackaged/main/default/objects/DPSA_contract__c/fields/Uplift_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Percentage__c</fullName>
    <label>Uplift Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>